--- a/html/skills.html
+++ b/html/skills.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills - My Portfolio</title>
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome for icons -->
-
+    <link rel="stylesheet" href="../css/skills.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -25,12 +25,73 @@
     </header>
     
     <main>
-        <section id="skills">
-            <h2>Skills</h2>
-            <p>This is the skills page.</p>
+        <h1>Skills</h1><br>
+        <section id="skills" class="resume-content">
+            <h2>Languages</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <img src="../images/Java.svg" alt="Java">
+                    <p>Java</p>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="../images/JavaScript.svg" alt="JavaScript">
+                    <p>JavaScript</p>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="../images/HTML5.svg" alt="HTML5">
+                    <p>HTML5</p>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <img src="../images/CSS3.svg" alt="CSS3">
+                    <p>CSS3</p>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+            </div>
+            <h2>Tools</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <img src="../images/Apache Maven.svg" alt="Apache Maven">
+                    <p>Apache Maven</p>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                </div>
+                <!-- Add more skill cards here with the same structure -->
+            </div>
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 My Portfolio. All rights reserved.</p>
         <ul class="social-icons">
@@ -64,6 +125,6 @@
         </ul>
     </footer>
 
-    <script src="js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
