--- a/Portfolio.html
+++ b/Portfolio.html
@@ -64,6 +64,6 @@
         </ul>
     </footer>
 
-    <script src="js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
