--- a/html/contact.html
+++ b/html/contact.html
@@ -91,7 +91,7 @@
         </ul>
     </footer>
 
-    <script src="js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     </script>
 </body>
