--- a/html/resume.html
+++ b/html/resume.html
@@ -16,7 +16,7 @@
         <button class="menu-toggle">☰</button>
         <nav>
             <ul>
-                <li><a href="Portfolio.html">Home</a></li>
+                <li><a href="../Portfolio.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -40,7 +40,7 @@
                     </a>
                 </div>
             </div>
-
+<hr class="customhr">
             <div id="resumebody">
 
                 <h1 class="resume-name">Jyothi Prasanna Kambam</h1>
