Updated as index.html for the deployment

--- a/html/about.html
+++ b/html/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - My Portfolio</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/about.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome for icons -->
 
 </head>
@@ -13,7 +15,7 @@
         <button class="menu-toggle">☰</button>
         <nav>
             <ul>
-                <li><a href="../Portfolio.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -26,11 +28,31 @@
     
     <main>
         <section id="about">
-            <h2>About Me</h2>
-            <p>This is the about page.</p>
+            <h2 class="main-heading" typing>About Me</h2>
+            <p class="intro">Hi, I’m Jyothi Prasanna Kambam, a dedicated software tester from Toronto, ON.</p>
+            <p class="opportunities">I’m currently looking for internship and entry-level opportunities where I can leverage my skills in software testing and development.</p>
+            <h3 class="sub-heading" typing>Skills & Expertise</h3>
+            <ul>
+                <li><strong>Testing Tools:</strong> Proficient with Selenium WebDriver and Postman.</li>
+                <li><strong>Languages:</strong> Learning Java and JavaScript through personal projects.</li>
+                <li><strong>Certification:</strong> ISTQB certified.</li>
+            </ul>
+            <p>I’m actively working on personal projects to build my experience with Java and JavaScript, and I’m excited to apply these skills in a professional environment.</p>
+            <h3 class="sub-heading" typing>Goals</h3>
+            <p>I’m eager to contribute to innovative projects and further develop my expertise. Let’s connect and explore opportunities together!</p>
+            <h3 class="sub-heading" typing>Hobbies & Interests</h3>
+            <ul>
+                <li><strong>Tech Enthusiast:</strong> Exploring new technologies and experimenting with coding challenges.</li>
+                <li><strong>Coding Projects:</strong> Working on personal projects to enhance my skills.</li>
+                <li><strong>Community Engagement:</strong> Participating in tech meetups and forums to network with professionals.</li>
+            </ul>
+            <h3 class="sub-heading" typing >Get in Touch</h3>
+            <p>Feel free to reach out!</p>
+            <a href="https://www.linkedin.com/in/jyothiprasannakambam" target="_blank" class="social-link">LinkedIn</a> | 
+            <a href="https://github.com/Jyothi2828" target="_blank" class="social-link">GitHub</a>
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 My Portfolio. All rights reserved.</p>
         <ul class="social-icons">
@@ -64,6 +86,6 @@
         </ul>
     </footer>
 
-    <script src="./js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
