--- a/html/resume.html
+++ b/html/resume.html
@@ -16,7 +16,7 @@
         <button class="menu-toggle">☰</button>
         <nav>
             <ul>
-                <li><a href="../Portfolio.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <section id="resume">
+        <section id="resume" class="resume1">
             <div class="resume-header">
                 <h1>Resume</h1>
                 <div class="resume-download">
@@ -40,19 +40,23 @@
                     </a>
                 </div>
             </div>
-<hr class="customhr">
+<hr class="customhr"><hr>
             <div id="resumebody">
 
                 <h1 class="resume-name">Jyothi Prasanna Kambam</h1>
 
                 <p class="contact-info">
-                    <u>jyothiprasannakambam@gmail.com</u> Toronto, ON M1P2C9 | (437) 602-0033
+                 <h4>jyothiprasannakambam@gmail.com</h4>
+                 <h4> Toronto, ON M1P2C9 | (437) 602-0033</h4>
                 </p>
-                <p class="social-links">
-                    <a href="https://www.linkedin.com/in/jyothiprasannakambam" target="_blank"
-                        class="color-linkedin">LinkedIn</a> |
-                    <a href="https://github.com/Jyothi2828" target="_blank" class="color-github">GitHub</a>
-                </p>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/jyothiprasannakambam" target="_blank" class="linkedin">
+                        <i class="fab fa-linkedin"></i> LinkedIn
+                    </a>
+                    <a href="https://github.com/Jyothi2828" target="_blank" class="github">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
 
                 <h2>Aspiring Software Tester proficient in Selenium WebDriver, Java, and Git, with a strong foundation
                     in manual and automated testing</h2>
