--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,7 @@
         <button class="menu-toggle">&#9776;</button> <!-- Hamburger Icon -->
         <nav>
             <ul>
-                <li><a href="../Portfolio.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -91,7 +91,7 @@
         </ul>
     </footer>
 
-    <script src="./js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     </script>
 </body>
