--- a/html/skills.html
+++ b/html/skills.html
@@ -13,7 +13,7 @@
         <button class="menu-toggle">☰</button>
         <nav>
             <ul>
-                <li><a href="../Portfolio.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -125,6 +125,6 @@
         </ul>
     </footer>
 
-    <script src="./js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
