--- a/html/contact.html
+++ b/html/contact.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <button class="menu-toggle">&#9776;</button> <!-- Hamburger Icon -->
-        <nav>
+        <button class="menu-toggle">☰</button>
+                <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
