--- a/html/resume.html
+++ b/html/resume.html
@@ -21,10 +21,12 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>            
             </ul>
         </nav>
+        <h1>My Resume</h1>
     </header>
+    
 
     <main>
         <section id="resume" class="resume1">
