--- a/html/skills.html
+++ b/html/skills.html
@@ -23,75 +23,56 @@
         </nav>
         <h1>My Skills</h1>
     </header>
-    
-    <main>
-        <h1>Skills</h1><br>
-        <section id="skills" class="resume-content">
-            <h2>Languages</h2>
-            <div class="skills-grid">
-                <div class="skill-card">
-                    <img src="../images/Java.svg" alt="Java">
-                    <p>Java</p>
-                    <div class="rating">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <img src="../images/JavaScript.svg" alt="JavaScript">
-                    <p>JavaScript</p>
-                    <div class="rating">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <img src="../images/HTML5.svg" alt="HTML5">
-                    <p>HTML5</p>
-                    <div class="rating">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <img src="../images/CSS3.svg" alt="CSS3">
-                    <p>CSS3</p>
-                    <div class="rating">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                </div>
-            </div>
-            <h2>Tools</h2>
-            <div class="skills-grid">
-                <div class="skill-card">
-                    <img src="../images/Apache Maven.svg" alt="Apache Maven">
-                    <p>Apache Maven</p>
-                    <div class="rating">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                </div>
-                <!-- Add more skill cards here with the same structure -->
-            </div>
-        </section>
-    </main>
+    <h2>  Skills and Tools</h2>
 
+    <section class="skills-tools">
+        <div class="card">
+            <div class="card__content">
+                <h3>Programming Languages</h3>
+                <ul>
+                    <li>Java</li>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__content">
+                <h3>Testing & Automation</h3>
+                <ul>
+                    <li>Selenium WebDriver</li>
+                    <li>Hybrid Framework</li>
+                    <li>Page Object Model (POM)</li>
+                    <li>Page Factory</li>
+                    <li>TestNG</li>
+                    <li>Cucumber</li>
+                    <li>Cross-Browser Testing</li>
+                    <li>Selenium Grid</li>
+                    <li>Manual Testing</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__content">
+                <h3>Web Technologies</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__content">
+                <h3>Tools & IDEs</h3>
+                <ul>
+                    <li>Eclipse IDE</li>
+                    <li>Visual Studio Code (VS Code)</li>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    
+ 
     <footer>
         <p>&copy; 2024 My Portfolio. All rights reserved.</p>
         <ul class="social-icons">
