--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Font Awesome for icons -->
     <meta name="google-site-verification" content="rbM9rBIpxkhSutSKdaTZ0vOELHRb22UD3bhnc7Nuy8o" />
+    <meta name="description" content="Jyothi Prasanna Kambam">
 
 </head>
 
