--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     </a>
                 </li>
             </ul>
+            <p>Jyothi Prasanna Kambam</p>
         </footer>
     
 
