--- a/html/projects.html
+++ b/html/projects.html
@@ -28,7 +28,7 @@
     <main>
         <section id="projects">
             <h2>Projects</h2>
-            <p>This is the projects page.</p>
+            <p>This is the projects page. Currently, the portfolio is under development and will be updated with more projects soon.</p>
         </section>
     </main>
     
