Modified about page

--- a/html/about.html
+++ b/html/about.html
@@ -40,7 +40,7 @@
                 <div class="card-header youtube-header">YouTube</div>
                 <br>
                 <a href="https://www.youtube.com/channel/UClN1EQx1ntnG5Uv3-nnRbMw" target="_blank" class="card-link">
-                    <h2 id="youtube-username">Channel Username</h2>    
+                    <h2 id="youtube-username">Click to view my Youtube Channel</h2>    
                 </a>
             </div>
             <div class="card instagram-card">
