--- a/html/about.html
+++ b/html/about.html
@@ -46,16 +46,17 @@
             <div class="card instagram-card">
                 <br>
                 <div class="card-header instagram-header">Instagram</div>
-                    <h2>Instagram</h2>
-                    <p>Click to view my Instagram.</p>
+                <a href="https://www.instagram.com/bbubblyyyy/" target="_blank" class="card-link">
+                    <h2 id="youtube-username">Click to view my Instagram Page</h2>    
+
                 </a>
             </div>
             <div class="card photo-card">
                 <br>
                 <div class="card-header photo-header">My Personal Work</div>
-                <a href="photos.html" class="card-link">
-                    <h2>Photos</h2>
-                    <p>Click to view my photos.</p>
+                <a href="https://www.instagram.com/bbubblyyyy/" target="_blank" class="card-link">
+                    <h2 id="youtube-username">Click to view my Interest</h2>    
+
                 </a>
             </div>
         </div>
